# box_entry_gate_detection

./: .gitignore  CMakeLists.txt  README.md  README_en.md  install.sh  package.xml
launch/: box_detect.rviz  box_detection.launch  test.launch  無題のドキュメント
pcd/ascii/: outdoor_edit_1.pcd  outdoor_edit_10.pcd  outdoor_edit_30.pcd  outdoor_edit_9.pcd
pcd/binary/: outdoor_edit_9.pcd
rviz/: for_experiment.rviz
src/: box_detect.cpp  box_detect_cluster.cpp  box_detect_origin.cpp  pcd_saver.cpp  pcd_saver_binary.cpp  pcd_viewer.cpp  pcdfile_saver.cpp  pcdfile_saver_binary.cpp  pcdfile_viewer.cpp  scene_model.cpp  topic_saver.cpp  無題のドキュメント
